# future

./: .gitignore  README.md  pyproject.toml
configs/: archive.yaml  archive_smoke.yaml  china_sources.yaml  external_news.yaml  feeds.yaml  feeds_oilprice.yaml  market.yaml  market_2018_2023.yaml  model.yaml  model_v1_baseline.yaml  model_v1_regression.yaml  model_v2.yaml  model_v2_english_only.yaml  model_v3_english_classification_sample20.yaml  model_v3_english_regression.yaml  model_v3_english_regression_sample20.yaml  model_v3_english_regression_sample50.yaml  nbd_keyword_sets.yaml  strategy.yaml  strategy_classification_variants.yaml  strategy_factor.yaml  strategy_factor_variants.yaml
scripts/: archive_ingest.py  audit_english_coverage.py  build_aligned_model_family_comparison.py  build_aligned_regime_comparison.py  build_english_global_clean.py  build_final_reporting_bundle.py  build_iteration_comparison.py  build_labels.py  build_model_family_comparison.py  build_nbd_seed_universe.py  build_weekly_dataset.py  discover_nbd_search_urls.py  discover_sina_roll_urls.py  discover_sina_search_urls.py  export_finnewshunter_mongo.py  fetch_akshare_news.py  fetch_hf_financial_multisource.py  fetch_hf_financial_news_2024.py  fetch_mainline_seed_articles.py  fetch_market_data.py  fetch_newsplease_commoncrawl.py  fetch_tushare_news.py  import_finnewshunter_export.py  import_hf_financial_multisource.py  import_public_news_dataset.py  ingest_rss.py  init_parallel_scoring.py  materialize_v2_inputs.py  merge_scoring_shards.py  monitor_parallel_scoring.py  run_all.py  train_eval.py  (+7 more)
(+66 files in other folders)
